test/Fail/Issue306b.err
test/Fail/Issue306b.agda:12.3-6: error: [CustomBackendError]
agda2hs:
  not supported: forced (dot) patterns in non-erased positions
